added id to h1 and link to new js file

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	</header>
 		<main class="container">
 			<section class="row">
-				<h1 class="col col-4">This is my first homework assignment</h1>
+				<h1 id="user-name" class="col col-4">This is my first homework assignment</h1>
 				<h2 class="col col-8">This is some more gibberish</h2>
 			</section>
 			<section class="row">
@@ -50,5 +50,7 @@
 			</section>
 		</div>
 	</footer>
+
+	<script src="app.js"></script>
 </body>
 </html>
